kubernetes/gestaoclientes/networking/service-gateway-v1.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gestaoclientes-info
spec:
  hosts:
    - "*"
  gateways:
    - gestao-clientes-gateway
  http:
    - match:
        - uri:
            prefix: /gestaoclientes
      route:
        - destination:
            host: gestaoclientes
            subset: v1
            port:
              number: 3200
