kubernetes/gestaoclientes/networking/service-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gestao-clientes-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gestaoclientes-info
spec:
  hosts:
    - "*"
  gateways:
    - gestao-clientes-gateway
  http:
    - match:
        - uri:
            prefix: /gestaoclientes
      route:
        - destination:
            host: gestaoclientes
            port:
              number: 3200
